# tower-otel

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose.yaml  otel-collector-config.yaml
examples/axum/: Cargo.toml  README.md
examples/axum/src/: http_manager.rs  main.rs
examples/tonic/: Cargo.toml  README.md  build.rs
examples/tonic/src/: grpc_manager.rs  main.rs
src/: helper.rs  lib.rs
src/axum/: metrics.rs  mod.rs  traces.rs
src/metrics/: axum.rs  mod.rs  reqwest.rs  service.rs  tonic.rs
src/metrics/http/: mod.rs
src/metrics/http/axum/: mod.rs
src/metrics/http/reqwest/: mod.rs
src/reqwest/: metrics.rs  traces.rs
src/tonic/: metrics.rs  traces.rs
src/traces/: axum.rs  extractors.rs  helper.rs  mod.rs  reqwest.rs  tonic.rs
src/traces/grpc/: extractors.rs  service.rs
src/traces/http/: extractors.rs  mod.rs  service.rs
