[package]
name = "tower-otel"
version = "0.1.0"
edition = "2021"

[dependencies]
tower = "0.5"
http = "1"
http-body = "1"
tracing = "0.1"
tracing-opentelemetry = "0.28.0"
opentelemetry = { version = "0.27", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio", "logs", "trace"] }
opentelemetry-semantic-conventions = { version = "0.27" }
opentelemetry-http = "0.27"
pin-project-lite = "0.2"
tonic = "0.12"
axum = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "json", "fmt", "tracing-log"] }
