[package]
name = "tower-otel"
version = "0.1.0"
edition = "2021"

[dependencies]
tower = "0.5"
http = "1"
http-body = "1"
tracing = "0.1"
opentelemetry = { version = "0.28", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.28", features = ["metrics", "rt-tokio", "logs", "trace", "testing"] }
opentelemetry-http = "0.28"
opentelemetry-semantic-conventions = { version = "0.28" }
tracing-opentelemetry = "0.29"
pin-project-lite = "0.2"
tonic = "0.12"
axum = "0.8"
reqwest = "0.12"
hyper-util = { version = "0.1", features = ["client"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "json", "fmt", "tracing-log"] }
